tdf#170392 - Align file name format constants with translate constants

Otherwise, conversions during the save/insert process will change the
format of the file name field because the constants need to be converted
from SwFileNameFormat to FilenameDisplayFormat and vice versa.

Change-Id: I6ee3ae3adc34a86560381f8e9585a016d4f312ec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198019
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit f7588e928a6de891e1fbf3b4d591e7d69347813a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198451
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>